Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95340

Linguist wrong warning about %n place markers

XMLWordPrintable

    • macOS
    • ec222b4ca (dev), ff43c0a97 (6.6), 2ffad939f (6.5)

      Have source string:

      %1°%2′%3

      and have translation string:

      %3%1°%2′

      This translation works fine at runtime. But Linguist 5.15.2 warns that "Translation does not refer to same place markers as in the source text". The warning goes away if you add a space after the %3, like this

      %3 %1°%2′

      But I don't want to have that space.

        For Gerrit Dashboard: QTBUG-95340
        # Subject Branch Project Status CR V

            lugerard Lucie Gerard
            twj T W
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes