linguist: Correct behavior of place marker validation

In the case of place markers directly following one another
the second was missed

Fixes: QTBUG-95340
Change-Id: I567f03905c4d55254ee3945b64eb5392d42c1a2d
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit ec222b4ca5cf0565d5473e231f0281c64cb803be)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>